clean up 2020 content

--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
               <a class="page-scroll" href="#sponsors">sponsors</a>
             </li>
             <li class="nav-item">
-              <a class="page-scroll" href="#venue">venue</a>
-            </li>
-            <li class="nav-item">
               <a class="page-scroll" href="#contact">contact</a>
             </li>
           </ul>
@@ -120,17 +117,9 @@
           <div class="divider"></div>
         </div>
         <div class="agenda container">
-          <div class="row py-3 border-top border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              08:15 AM - 08:45 AM
-            </div>
-            <div class="col-12 col-sm-8">
-              <strong>Registration</strong>
-            </div>
-          </div>
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
-              08:45 AM - 09:00 AM
+              08:50 AM - 09:00 AM
             </div>
             <div class="col-12 col-sm-8">
               <strong>Opening</strong>
@@ -138,123 +127,10 @@
           </div>
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
-              09:00 AM - 09:40 AM
+              90:12 AM - 12:00 PM
             </div>
             <div class="col-12 col-sm-8">
-              <p class="mb-0">
-                <strong>
-                  Building Applications Fast and Scalable with Azure Container Apps</strong>
-              </p>
-              <p class="mb-0">
-                <a href="#thang-chung">Thang Chung</a>
-              </p>
-              <p class="mb-0">
-                <a target="_blank"
-                  href="https://docs.microsoft.com/en-us/dotnet/architecture/cloud-native/definition">Cloud-native
-                  applications</a>
-                become the de facto standard for building modern
-                applications to run applications everywhere from on-prem to
-                on-cloud. Serverless brings up the ability for reducing the
-                efforts and cost of infrastructure management. The question
-                is how can we combine it together to develop the small
-                application using MSA patterns and agility to deploy
-                standalone applications as well as cost-saving for
-                infrastructure operations?
-                <br /><br />
-                <a target="_blank" href="https://dapr.io">Dapr</a>,
-                <a target="_blank" href="https://keda.sh">KEDA</a>, and
-                <a target="_blank" href="https://www.envoyproxy.io">Envoy Proxy</a> combine
-                into what we call
-                <a target="_blank" href="https://azure.microsoft.com/en-us/services/container-apps">Azure Containers
-                  Apps</a>
-                (ACA). The developing and running of the application process
-                in ACA will follow the Open Application Model (OAM) with
-                Dapr and it solves the hard parts in developing and running
-                applications in microservices style by introducing awesome
-                building blocks such as service invocation, message-based
-                communication, event bindings, secret management, mTLS, and
-                so on. Scalability in ACA is easy because of KEDA which is
-                tooling that has the ability to "scale to zero", and it is a
-                bedrock of building serverless applications nowadays.
-                Networking management in ACA is taken care of by Envoy Proxy
-                which is a production battle-tested by a lot of big
-                companies. And many more features in ACA will be introduced
-                to audiences in the presentation.
-              </p>
-              <p class="mb-0">
-                <a href="presentations/GA2022-BuildingApplicationsFastAndScalableWithAzureContainerApps.pdf">Slides</a>
-              </p>
-            </div>
-          </div>
-          <div class="row py-3 border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              09:45 AM - 10:25 AM
-            </div>
-            <div class="col-12 col-sm-8">
-              <p class="mb-0">
-                <strong>Managed Identities for Azure resources</strong>
-              </p>
-              <p class="mb-0">
-                <a href="#thien-nguyen">Thien Nguyen</a>
-              </p>
-              <p class="mb-0">
-                A common challenge of cloud solutions is the management of
-                secrets and credentials used to secure communication between
-                different components. Managed identities eliminate the need
-                for developers to manage credentials.
-                <br /><br />
-                In this talk, we will show you how to use Managed Identities
-                to authenticate common Azure resources
-              </p>
-            </div>
-          </div>
-          <div class="row py-3 border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              10:30 AM - 11:10 AM
-            </div>
-            <div class="col-12 col-sm-8">
-              <p class="mb-0">
-                <strong>Identity Management with Azure AD B2C</strong>
-              </p>
-              <p class="mb-0">
-                <a href="#long-chang">Long Chang</a>
-              </p>
-              <p class="mb-0">
-                Identity management is the crucial portion of any enterprise system, building this portion is a time
-                consuming job. Azure Ad B2C provide an out of the box external user management
-                with rich customization and white label solution.
-                <br /><br />
-                Section will include common use-cases and common scenarios for the use of Azure AD B2C as long as the
-                demo for the scenarios.
-              </p>
-            </div>
-          </div>
-          <div class="row py-3 border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              11:15 AM - 11:55 PM
-            </div>
-            <div class="col-12 col-sm-8">
-              <p class="mb-0">
-                <strong>Distributed cloud solution with Azure Arc</strong>
-              </p>
-              <p class="mb-0">
-                <a href="#phi-huynh">Phi Huynh</a>
-              </p>
-              <p class="mb-0">With Azure Arc we can accelerate innovation across hybrid and multi-cloud environments.
-                Wherever you are, on-premise, at the edge, Azure cloud or other cloud providers, whether it's Virtual Machine,
-                Data services or cloud-native apps running on Kubernetes, Azure Arc can enable these services running
-                across the environments.
-                <br /><br />
-                We will discuss in details how Azure Arc can help us control and govern complex environments that extend across data centers, multi clouds and edge.
-              </p>
-            </div>
-          </div>
-          <div class="row py-3 border-bottom">
-            <div class="col-12 col-sm-4 text-left text-sm-right">
-              11:55 AM - 12:00 PM
-            </div>
-            <div class="col-12 col-sm-8">
-              <strong>Closing</strong>
+              <strong>TBU</strong>
             </div>
           </div>
         </div>
@@ -345,20 +221,14 @@
           <div id="long-chang" class="col-12 col-sm-6 mb-5">
             <div class="row">
               <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/long_chang.png" />
+                <img class="w-100 mb-3 round" src="images/speakers/user.jpg" />
               </div>
               <div class="col-12 col-sm-8">
-                <h3>Long Chang</h3>
-                <p>
-                  Long Chang is working as Solution Architect in Nashtech and leading the cloud solution group aim to
-                  build and modernize application based on cloud. He is Interested in Azure cloud services and he was
-                  fascinated by serverless services on cloud
-                </p>
+                <h3>TB Invite</h3>
                 <p>
 
-                  <a href="https://www.facebook.com/long.ca.16" class="speakersocial">
-                    <i class="fa fa-facebook fa-fw"></i>
-                  </a>
+                </p>
+                <p>
                 </p>
               </div>
             </div>
