add first topic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta property="og:title" content="Global Azure 2023 - Vietnam" />
-  <meta property="og:image" content="images/globalazure-vn.png" />
+  <meta property="og:image" content="images/globalazure-vn-2023.png" />
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
 
@@ -23,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="images/globalazure-vn-logo.png" alt="" class="logo" /></a>
+        <a class="navbar-brand" href="#"><img src="images/globalazure-vn-logo-2023.png" alt="" class="logo" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-md-12">
               <div id="divTimer" class="countdown"></div>
-              <a href="https://www.youtube.com/playlist?list=PLQG4l7GNfjZOFFELzCGB5ZFZnob9oQWFC" class="btn btn-primary register">Watch recordings
+              <a href="https://forms.office.com/r/SYrAnr95k3" target="_blank" class="btn btn-primary register">register
               </a>
             </div>
           </div>
@@ -119,7 +119,7 @@
         <div class="agenda container">
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
-              08:50 AM - 09:00 AM
+              08:15 AM - 08:30 AM
             </div>
             <div class="col-12 col-sm-8">
               <strong>Opening</strong>
@@ -127,10 +127,19 @@
           </div>
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
-              90:12 AM - 12:00 PM
+              8:30 AM - 09:15 PM
             </div>
             <div class="col-12 col-sm-8">
-              <strong>TBU</strong>
+			  <p class="mb-0">
+				<strong>Azure Fundamentals</strong>
+			  </p>
+			  <p class="mb-0">
+                <a href="#thien-nguyen">Thien Nguyen</a>
+              </p>
+			  <p class="mb-0">
+                Learn/strengthen core concepts of Azure, common Azure services, how to create and manage Azure resources effectively.
+				In this talk we also discuss about a roadmap to become an Azure Solution Architect.
+              </p>
             </div>
           </div>
         </div>
