add speaker info

--- a/index.html
+++ b/index.html
@@ -230,14 +230,19 @@
           <div id="long-chang" class="col-12 col-sm-6 mb-5">
             <div class="row">
               <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/user.jpg" />
+                <img class="w-100 mb-3 round" src="images/speakers/long_chang.png" />
               </div>
               <div class="col-12 col-sm-8">
-                <h3>TB Invite</h3>
+               <h3>Long Chang</h3>
                 <p>
-
+                  Long Chang is working as Solution Architect in Nashtech and leading the cloud solution group aim to
+                  build and modernize application based on cloud. He is Interested in Azure cloud services and he was
+                  fascinated by serverless services on cloud
                 </p>
                 <p>
+                  <a href="https://www.facebook.com/long.ca.16" class="speakersocial">
+                    <i class="fa fa-facebook fa-fw"></i>
+                  </a>
                 </p>
               </div>
             </div>
