--- a/index.html
+++ b/index.html
@@ -142,6 +142,54 @@
               </p>
             </div>
           </div>
+		   <div class="row py-3 border-bottom">
+            <div class="col-12 col-sm-4 text-left text-sm-right">
+              09:15 AM - 10:00 AM
+            </div>
+            <div class="col-12 col-sm-8">
+              <p class="mb-0">
+                <strong>To be updated</strong>
+              </p>
+              <p class="mb-0">
+                <a href="#long-chang">TBU</a>
+              </p>
+              <p class="mb-0">
+				TBU
+              </p>
+            </div>
+          </div>
+		  <div class="row py-3 border-bottom">
+            <div class="col-12 col-sm-4 text-left text-sm-right">
+              10:00 AM - 10:45 AM
+            </div>
+            <div class="col-12 col-sm-8">
+              <p class="mb-0">
+                <strong>To be updated</strong>
+              </p>
+              <p class="mb-0">
+                <a href="#long-chang">TBU</a>
+              </p>
+              <p class="mb-0">
+				TBU
+              </p>
+            </div>
+          </div>
+		  <div class="row py-3 border-bottom">
+            <div class="col-12 col-sm-4 text-left text-sm-right">
+              10:45 AM - 11:30 AM
+            </div>
+            <div class="col-12 col-sm-8">
+              <p class="mb-0">
+                <strong>To be updated</strong>
+              </p>
+              <p class="mb-0">
+                <a href="#long-chang">TBU</a>
+              </p>
+              <p class="mb-0">
+				TBU
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
