add topic for Thang

--- a/index.html
+++ b/index.html
@@ -130,35 +130,46 @@
               8:30 AM - 09:15 PM
             </div>
             <div class="col-12 col-sm-8">
-			  <p class="mb-0">
-				<strong>Azure Fundamentals</strong>
-			  </p>
-			  <p class="mb-0">
+              <p class="mb-0">
+                <strong>Azure Fundamentals</strong>
+              </p>
+              <p class="mb-0">
                 <a href="#thien-nguyen">Thien Nguyen</a>
               </p>
-			  <p class="mb-0">
-                Learn/strengthen core concepts of Azure, common Azure services, how to create and manage Azure resources effectively.
-				In this talk we also discuss about a roadmap to become an Azure Solution Architect.
+              <p class="mb-0">
+                Learn/strengthen core concepts of Azure, common Azure services, how to create and manage Azure resources
+                effectively.
+                In this talk we also discuss about a roadmap to become an Azure Solution Architect.
               </p>
             </div>
           </div>
-		   <div class="row py-3 border-bottom">
+          <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               09:15 AM - 10:00 AM
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>To be updated</strong>
+                <strong>Streamline event-driven microservices with Dapr on Azure</strong>
               </p>
               <p class="mb-0">
-                <a href="#long-chang">TBU</a>
+                <a href="#thang-chung">Thang Chung</a>
               </p>
               <p class="mb-0">
-				TBU
+                The presentation walks you through the journey of software architecture and patterns for decoupling and
+                the principle of "last responsible moment" which is the bedrock of building evolutionary architectures.
+                It paves the way for delaying architectural decisions which give us replaceable and composable apps at
+                runtime.
+                <br />
+                Dapr jumps into this game to help coordinate between the development and operation phases in the
+                application life cycle. 
+                <br />
+                Finally, the presentation will show you how to run the distributed apps on local
+                development and deploy them to the Azure cloud platform without changing any business logic code in the
+                application.
               </p>
             </div>
           </div>
-		  <div class="row py-3 border-bottom">
+          <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               10:00 AM - 10:45 AM
             </div>
@@ -170,11 +181,11 @@
                 <a href="#long-chang">TBU</a>
               </p>
               <p class="mb-0">
-				TBU
+                TBU
               </p>
             </div>
           </div>
-		  <div class="row py-3 border-bottom">
+          <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               10:45 AM - 11:30 AM
             </div>
@@ -186,7 +197,7 @@
                 <a href="#long-chang">TBU</a>
               </p>
               <p class="mb-0">
-				TBU
+                TBU
               </p>
             </div>
           </div>
@@ -200,28 +211,6 @@
           <div class="divider"></div>
         </div>
         <div class="row">
-          <div id="thang-chung" class="col-12 col-sm-6 mb-5">
-            <div class="row">
-              <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/thang_chung.png" />
-              </div>
-              <div class="col-12 col-sm-8">
-                <h3>Thang Chung</h3>
-                <p>
-                  Thang is a NashTech Senior Solution Architect and a
-                  Microsoft MVP. He passions to work on Open Source projects
-                  and mainly focuses on designing, implementing and deploying
-                  Microservices Applications as well as toolings and (F)OSS in
-                  the CNCF ecosystem.
-                </p>
-                <p>
-                  <a href="https://github.com/thangchung" class="speakersocial">
-                    <i class="fa fa-github fa-fw"></i>
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
           <div id="thien-nguyen" class="col-12 col-sm-6 mb-5">
             <div class="row">
               <div class="col-12 col-sm-4">
@@ -247,6 +236,30 @@
               </div>
             </div>
           </div>
+          <div id="thang-chung" class="col-12 col-sm-6 mb-5">
+            <div class="row">
+              <div class="col-12 col-sm-4">
+                <img class="w-100 mb-3 round" src="images/speakers/thang_chung.png" />
+              </div>
+              <div class="col-12 col-sm-8">
+                <h3>Thang Chung</h3>
+                <p>
+                  Technical Manager at NT Vietnam and Microsoft Azure MVP.
+                  <br />
+                  Thang loves to work on OSSes, and architect applications on Microservices, Serverless, and
+                  WebAssembly/WASI in the CNCF ecosystem.
+                </p>
+                <p>
+                  <a href="https://github.com/thangchung" class="speakersocial">
+                    <i class="fa fa-github fa-fw"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/thang-chung-2b475614/" class="speakersocial"><i
+                      class="fa fa-linkedin fa-fw"></i></a>
+                </p>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="row">
           <div id="phi-huynh" class="col-12 col-sm-6 mb-5">
@@ -281,7 +294,7 @@
                 <img class="w-100 mb-3 round" src="images/speakers/long_chang.png" />
               </div>
               <div class="col-12 col-sm-8">
-               <h3>Long Chang</h3>
+                <h3>Long Chang</h3>
                 <p>
                   Long Chang is working as Solution Architect in Nashtech and leading the cloud solution group aim to
                   build and modernize application based on cloud. He is Interested in Azure cloud services and he was
