add Azure container app topic

--- a/index.html
+++ b/index.html
@@ -175,13 +175,36 @@
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>To be updated</strong>
+                <strong>Simplify you deployment with Azure container app</strong>
               </p>
               <p class="mb-0">
-                <a href="#long-chang">TBU</a>
+                <a href="#long-chang">Long Chang</a>
               </p>
               <p class="mb-0">
-                TBU
+                Azure Container Apps is a fully managed environment that enables you to run microservices and containerized applications on a serverless platform
+              </p>
+			  <p class="mb-1">
+                Reducing the complexity of k8s, learning cureve and import productivity when you running microservices or any high resilience and high available appication. ignore K8s things and leave it to azure.
+              </p>
+			  <p class="mb-0">
+                we Introduce some key point as below:
+				<ul>
+				<li>
+				How to deploy to Azure container App
+				</li>
+				<li>
+				Deploy Simple Api, With ingest http
+				</li>
+				<li>
+				Services Commmunication with Dapr
+				</li>
+				<li>
+				Basic Scale & scale with keda
+				</li>
+				<li>
+				Connect Services
+				</li>
+				</ul>
               </p>
             </div>
           </div>
