update Dapr topic description

--- a/index.html
+++ b/index.html
@@ -155,17 +155,11 @@
                 <a href="#thang-chung">Thang Chung</a>
               </p>
               <p class="mb-0">
-                The presentation walks you through the journey of software architecture and patterns for decoupling and
-                the principle of "last responsible moment" which is the bedrock of building evolutionary architectures.
-                It paves the way for delaying architectural decisions which give us replaceable and composable apps at
-                runtime.
+                The presentation walks you through the journey of software architecture and patterns for decoupling components and the principle of "last responsible moment" which is the bedrock of building evolutionary architectures. It paves the way for delaying architectural decisions which gives us replaceable and composable apps at runtime.
                 <br />
-                Dapr jumps into this game to help coordinate between the development and operation phases in the
-                application life cycle. 
+                Dapr jumps into this game to help coordinate between the development and operation tasks in the application life cycle as well as enable event-driven communication between distributed apps with replaceable specific message brokers. 
                 <br />
-                Finally, the presentation will show you how to run the distributed apps on local
-                development and deploy them to the Azure cloud platform without changing any business logic code in the
-                application.
+                Finally, the presentation will show you how to run the distributed apps on local development and deploy them to the Azure cloud platform without changing any business logic code in the application.
               </p>
             </div>
           </div>
