--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>To be updated</strong>
+                <strong>Discover the power of Azure OpenAI service</strong>
               </p>
               <p class="mb-0">
-                <a href="#long-chang">TBU</a>
+                <a href="#phi-huynh">Phi Huynh</a>
               </p>
               <p class="mb-0">
-                TBU
+                In this session, we discover the power of Generative AI by using the large-scale models such as GPT-3.5, GPT-4, Codex, DALL-E, ... to unlock new scenarios for businesses. We also discover on how to custom AI models fine-tuned with your data hyperparameters to fit into your business and integrate with other Azure services.
               </p>
             </div>
           </div>
