update misspelling for azure container app

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>Simplify you deployment with Azure container app</strong>
+                <strong>Simplify your deployment with Azure container app</strong>
               </p>
               <p class="mb-0">
                 <a href="#long-chang">Long Chang</a>
@@ -178,7 +178,7 @@
                 Azure Container Apps is a fully managed environment that enables you to run microservices and containerized applications on a serverless platform
               </p>
 			  <p class="mb-1">
-                Reducing the complexity of k8s, learning cureve and import productivity when you running microservices or any high resilience and high available appication. ignore K8s things and leave it to azure.
+                Reducing the complexity of k8s, learning curve and improve productivity when you running microservices or any high resilience and high available applications. Ignore K8s things and leave it to azure.
               </p>
 			  <p class="mb-0">
                 we Introduce some key point as below:
