--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <i class="fa fa-cloud fa-2x"></i>
               <h3 class="my-4">Deep Dive Sessions</h3>
               <p>
-                One full day of <strong>deep dive</strong> sessions on Azure
+                A haft day of <strong>deep dive</strong> sessions on Azure
                 for Developers and IT Pro's delivered by the experts to get
                 you started on complex topics like Containers, Kubernetes,
                 Microservices and Security
@@ -127,7 +127,7 @@
           </div>
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
-              8:30 AM - 09:15 PM
+              8:30 AM - 09:15 AM
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
