add in Vietnamese

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </h1>
           <h2 class="event-date">13 MAY 2023</h2>
           <div class="divider"></div>
-          <p>Online event, all talks about Microsoft Azure!</p>
+          <p>Online event, all talks about Microsoft Azure! In Vietnamese</p>
         </div>
         <div class="row">
           <div class="col-12 col-sm-4">
