--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <div class="col-12 col-sm-8">
                 <h3>Thien Nguyen</h3>
                 <p>
-                  Thien is Engineering Manager at NashTech, a Microsoft MVP
+                  Thien is Technical Manager at NashTech, a Microsoft MVP
                   and the creator of
                   <a target="_blank" href="https://github.com/simplcommerce/SimplCommerce">SimplCommerce</a>. He is a
                   passionate developer, a mentor and a speaker. His
