--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   and the creator of
                   <a target="_blank" href="https://github.com/simplcommerce/SimplCommerce">SimplCommerce</a>. He is a
                   passionate developer, a mentor and a speaker. His
-                  current interests are .NET Core, Azure and Microservices
+                  current interests are .NET Core, Java, Azure and Microservices
                 </p>
                 <p>
                   <a href="https://thienn.com" class="speakersocial"><i class="fa fa-rss fa-fw"
