Fixed the title of the presentation

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
             <div class="col-12 col-sm-8">
               <p class="mb-0">
-                <strong>Streamline event-driven microservices with Dapr on Azure</strong>
+                <strong>Streamline software application development with Dapr on Azure</strong>
               </p>
               <p class="mb-0">
                 <a href="#thang-chung">Thang Chung</a>
