add link to join

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-md-12">
               <div id="divTimer" class="countdown"></div>
-              <a href="https://forms.office.com/r/SYrAnr95k3" target="_blank" class="btn btn-primary register">register
+              <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZDM1MzBiY2ItOGQ1Ni00YTA3LWJhMDctYjA1MzU2ZGVhNTQy%40thread.v2/0?context=%7b%22Tid%22%3a%22f4308c54-0208-43d3-afad-1f8df2f678b7%22%2c%22Oid%22%3a%2226ec7ec0-0f0f-4ced-9add-98d710644a0e%22%7d" target="_blank" class="btn btn-primary register">Join event
               </a>
             </div>
           </div>
