--- a/index.html
+++ b/index.html
@@ -155,11 +155,20 @@
                 <a href="#thang-chung">Thang Chung</a>
               </p>
               <p class="mb-0">
-                The presentation walks you through the journey of software architecture and patterns for decoupling components and the principle of "last responsible moment" which is the bedrock of building evolutionary architectures. It paves the way for delaying architectural decisions which gives us replaceable and composable apps at runtime.
+                The presentation walks you through the journey of software architecture and patterns for decoupling
+                components and the principle of "last responsible moment" which is the bedrock of building evolutionary
+                architectures. It paves the way for delaying architectural decisions which gives us replaceable and
+                composable apps at runtime.
                 <br />
-                Dapr jumps into this game to help coordinate between the development and operation tasks in the application life cycle as well as enable event-driven communication between distributed apps with replaceable specific message brokers. 
+                Dapr jumps into this game to help coordinate between the development and operation tasks in the
+                application life cycle as well as enable event-driven communication between distributed apps with
+                replaceable specific message brokers.
                 <br />
-                Finally, the presentation will show you how to run the distributed apps on local development and deploy them to the Azure cloud platform without changing any business logic code in the application.
+                Finally, the presentation will show you how to run the distributed apps on local development and deploy
+                them to the Azure cloud platform without changing any business logic code in the application.
+                <br />
+                <b>Slides: <a
+                    href="presentations/GlobalAzure2023_ThangChung_StreamlineMicroservicesDevelopmentWithDapr.pdf">GlobalAzure2023_ThangChung_StreamlineMicroservicesDevelopmentWithDapr.pdf</b></a>
               </p>
             </div>
           </div>
@@ -175,30 +184,32 @@
                 <a href="#long-chang">Long Chang</a>
               </p>
               <p class="mb-0">
-                Azure Container Apps is a fully managed environment that enables you to run microservices and containerized applications on a serverless platform
+                Azure Container Apps is a fully managed environment that enables you to run microservices and
+                containerized applications on a serverless platform
               </p>
-			  <p class="mb-1">
-                Reducing the complexity of k8s, learning curve and improve productivity when you running microservices or any high resilience and high available applications. Ignore K8s things and leave it to azure.
+              <p class="mb-1">
+                Reducing the complexity of k8s, learning curve and improve productivity when you running microservices
+                or any high resilience and high available applications. Ignore K8s things and leave it to azure.
               </p>
-			  <p class="mb-0">
+              <p class="mb-0">
                 we Introduce some key point as below:
-				<ul>
-				<li>
-				How to deploy to Azure container App
-				</li>
-				<li>
-				Deploy Simple Api, With ingest http
-				</li>
-				<li>
-				Services Commmunication with Dapr
-				</li>
-				<li>
-				Basic Scale & scale with keda
-				</li>
-				<li>
-				Connect Services
-				</li>
-				</ul>
+              <ul>
+                <li>
+                  How to deploy to Azure container App
+                </li>
+                <li>
+                  Deploy Simple Api, With ingest http
+                </li>
+                <li>
+                  Services Commmunication with Dapr
+                </li>
+                <li>
+                  Basic Scale & scale with keda
+                </li>
+                <li>
+                  Connect Services
+                </li>
+              </ul>
               </p>
             </div>
           </div>
@@ -214,7 +225,10 @@
                 <a href="#phi-huynh">Phi Huynh</a>
               </p>
               <p class="mb-0">
-                In this session, we discover the power of Generative AI by using the large-scale models such as GPT-3.5, GPT-4, Codex, DALL-E, ... to unlock new scenarios for businesses. We also discover on how to custom AI models fine-tuned with your data hyperparameters to fit into your business and integrate with other Azure services.
+                In this session, we discover the power of Generative AI by using the large-scale models such as GPT-3.5,
+                GPT-4, Codex, DALL-E, ... to unlock new scenarios for businesses. We also discover on how to custom AI
+                models fine-tuned with your data hyperparameters to fit into your business and integrate with other
+                Azure services.
               </p>
             </div>
           </div>
