--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Global Azure 2023 - Vietnam</title>
+  <title>Global Azure 2024 - Vietnam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta property="og:title" content="Global Azure 2023 - Vietnam" />
+  <meta property="og:title" content="Global Azure 2024 - Vietnam" />
   <meta property="og:image" content="images/globalazure-vn-2023.png" />
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
@@ -56,8 +56,6 @@
           <div class="row">
             <div class="col-md-12">
               <div id="divTimer" class="countdown"></div>
-              <a href="https://www.youtube.com/playlist?list=PLQG4l7GNfjZMdtcmjn6zDLbMlOWWKEO5g" class="btn btn-primary register">Watch recordings
-              </a>
             </div>
           </div>
         </div>
@@ -69,10 +67,10 @@
       <div class="container">
         <div class="section-heading scrollpoint sp-effect3">
           <h1>
-            Global Azure 2023 - Vietnam by
+            Global Azure 2024 - Vietnam by
             <span class="DevCafe">DEV Cafe</span>
           </h1>
-          <h2 class="event-date">13 MAY 2023</h2>
+          <h2 class="event-date">20 APR 2024</h2>
           <div class="divider"></div>
           <p>Online event, all talks about Microsoft Azure! In Vietnamese</p>
         </div>
@@ -113,7 +111,7 @@
     <section id="agenda">
       <div class="container">
         <div class="section-heading scrollpoint sp-effect3">
-          <h1>Agenda</h1>
+          <h1>Agenda (Vietnamese)</h1>
           <div class="divider"></div>
         </div>
         <div class="agenda container">
@@ -122,9 +120,10 @@
               08:15 AM - 08:30 AM
             </div>
             <div class="col-12 col-sm-8">
-              <strong>Opening</strong>
+              <strong>To be updated</strong>
             </div>
           </div>
+		<!--  
           <div class="row py-3 border-bottom">
             <div class="col-12 col-sm-4 text-left text-sm-right">
               8:30 AM - 09:15 AM
@@ -232,7 +231,8 @@
               </p>
             </div>
           </div>
-        </div>
+        -->
+		</div>
       </div>
     </section>
     <section id="speakers" class="container content-section">
@@ -319,26 +319,6 @@
               </div>
             </div>
           </div>
-          <div id="long-chang" class="col-12 col-sm-6 mb-5">
-            <div class="row">
-              <div class="col-12 col-sm-4">
-                <img class="w-100 mb-3 round" src="images/speakers/long_chang.png" />
-              </div>
-              <div class="col-12 col-sm-8">
-                <h3>Long Chang</h3>
-                <p>
-                  Long Chang is working as Solution Architect in Nashtech and leading the cloud solution group aim to
-                  build and modernize application based on cloud. He is Interested in Azure cloud services and he was
-                  fascinated by serverless services on cloud
-                </p>
-                <p>
-                  <a href="https://www.facebook.com/long.ca.16" class="speakersocial">
-                    <i class="fa fa-facebook fa-fw"></i>
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -418,7 +398,7 @@
     $(document).ready(function () {
       appMaster.preLoader();
 
-      $("#divTimer").countdown("2023/05/13 08:45:00", function (event) {
+      $("#divTimer").countdown("2024/04/20 08:45:00", function (event) {
         $(this).html(
           event.strftime(
             "<div>%D <span>Days</span></div>  <div>%H<span>Hours</span></div> <div>%M<span>Minutes</span></div> <div>%S<span>Seconds</span></div>"
