--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta property="og:title" content="Global Azure 2024 - Vietnam" />
-  <meta property="og:image" content="images/globalazure-vn-2023.png" />
+  <meta property="og:image" content="images/globalazure-vn-2024.jpg" />
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
 
@@ -23,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="images/globalazure-vn-logo-2023.png" alt="" class="logo" /></a>
+        <a class="navbar-brand" href="#"><img src="images/globalazure-vn-logo-2024.png" alt="" class="logo" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
