add link to register

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <div class="row">
             <div class="col-md-12">
               <div id="divTimer" class="countdown"></div>
+                <a href="https://forms.office.com/r/YvE5qzGC00" target="_blank" class="btn btn-primary register">register</a>
             </div>
           </div>
         </div>
